--- a/plugin.xml
+++ b/plugin.xml
@@ -46,11 +46,12 @@
                 <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer"/>
             </feature>
         </config-file>
+<!-- cordova-plugin-file will add this already
 
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         </config-file>
-
+-->
         <source-file src="src/android/FileTransfer.java" target-dir="src/org/apache/cordova/filetransfer" />
         <source-file src="src/android/FileProgressResult.java" target-dir="src/org/apache/cordova/filetransfer" />
         <source-file src="src/android/FileUploadResult.java" target-dir="src/org/apache/cordova/filetransfer" />
